--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -392,6 +392,19 @@
     <!-- Hotels -->
     <string name="nav_hotels">Hotels</string>
 
+    <!-- New launch screen -->
+    <!-- Hotels -->
+    <string name="launch_hotels">Hotels</string>
+    <!-- Flights -->
+    <string name="launch_flights">Flights</string>
+    <!-- Flights -->
+    <string name="launch_cars">Cars</string>
+    <!-- Top deals tonight -->
+    <string name="nearby_deals_title">Top deals tonight</string>
+    <!-- See all nearby deals -->
+    <string name="nearby_deals_expand">See all</string>
+
+
     <!-- Launch screen -->
     <!-- Label for launch screen hotel button secondary text -->
     <string name="launch_hotel_secondary_text">Get a room.</string>
