--- a/project/src/travelocity/res/values/strings.xml
+++ b/project/src/travelocity/res/values/strings.xml
@@ -89,4 +89,6 @@
     <string name="share_template_long_ad_tvly">Book hotels, flights and view &amp; share your itineraries. Download the free Travelocity mobile app today.\n%s</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
     <string name="total_due_to_our_brand_today">Total Due to Travelocity Today:</string>
+    <!-- Launch screen destination list, launch card title text -->
+    <string name="destination_list_launch_card_title_text">%1$s,\n%2$s</string>
 </resources>
