Add launch hotel list upsells

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -401,6 +401,8 @@
     <string name="nearby_deals_title">Top deals tonight</string>
     <!-- See all nearby deals -->
     <string name="nearby_deals_expand">See all</string>
+    <!-- Percent off template, e.g. 50% off -->
+    <string name="percent_off_TEMPLATE">%2.0f%% off</string>
 
 
     <!-- Launch screen -->
