4063. Cars - Checkout - Driver info
Adding stateListDrawable for driver checkout state, both icon on the right and left.
Removed "Add New Traveler" from Saved traveler dropdown - Won't be in for Cars MVP.
Bind traveler on successful login and unbind on logout.
Changed driver/traveler initial generated bitmap colors to match Cars theme.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="cars_payment_details_text">Payment details</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Enter driver details</string>
+    <!-- Text for select saved contacts-->
+    <string name="cars_saved_contacts_text">Select saved contacts</string>
 
     <!-- Cars Confirmation Screen -->
     <!-- Title for calendar event .  %1$s is the pick up location code, e.g. "SFO" -->
