Incorporated SRP design. Updated test.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -175,6 +175,8 @@
     <string name="offer_book_now">Book Now %1$s</string>
     <!-- Template for tickets type and count  summary -->
     <string name="ticket_summary_type_count">%1$s %2$s</string>
+    <!-- Activity search results per ticket type e.g. per traveller -->
+    <string name="per_ticket_type_TEMPLATE">per %1$s</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
