--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -160,7 +160,7 @@
     <!-- Error messge for missing start date in LX search form -->
     <string name="lx_error_missing_start_date">Date missing</string>
     <!-- Button to show calendar and selected dates -->
-    <string name="select_lx_search_dates">Select dates</string>
+    <string name="select_lx_search_dates">Select date</string>
     <!-- Activity details highlights heading -->
     <string name="highlights_activity_details">Highlights &#8212;</string>
     <!-- Activity details description heading -->
