--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -35,6 +35,10 @@
     <string name="enter_driver_details">Enter driver details</string>
     <!-- Text for select saved contacts-->
     <string name="cars_saved_contacts_text">Select saved contacts</string>
+    <!-- Text for enter payment details-->
+    <string name="enter_payment_details">Enter payment details</string>
+    <!-- Template for selected credit card-->
+    <string name="selected_card_template">Expires %s</string>
 
     <!-- car result -->
     <!-- car door range -->
