--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -123,6 +123,8 @@
     <string name="successful_checkout_cross_sell_flight">Flights in %1$s</string>
     <!-- Car confirmation screen label -->
     <string name="successful_checkout_pickup_label">Pick-up at</string>
+    <!-- Car confirmation pickup time label e.g. March 10, 12:30pm to -->
+    <string name="car_confirmation_pickup_time_TEMPLATE">$s to</string>
     <!-- Car confirmation itin text -->
     <string name="successful_checkout_email_label">Itinerary sent to</string>
     <!-- Car confirmation directions text -->
