4069 car create trip error handling
- If the error is price change, send user to the checkout where
we will communicate the price change.
- If there is any other error on create trip, send the user back
to the search screen to perform a new search.

Also, include two tests for the above conditions that are added to the
buildbot pipeline.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -142,7 +142,11 @@
     <string name="car_confirmation_directions">Directions to %1$s</string>
     <!-- Button label for calling customer support -->
     <string name="call_customer_support">Call Customer Support</string>
-    <!-- Error message for some missing checkout params -->
+
+    <!-- Car error strings -->
+    <string name="oops">Oops! Something happened, please search again.</string>
+
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">Enter your destination</string>
