4089: Phone launch loading state animation

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -625,6 +625,8 @@
     <string name="nearby_deals_expand">See all</string>
     <!-- Percent off template, e.g. 50% off -->
     <string name="percent_off_TEMPLATE">-%2.0f%%</string>
+    <!-- List loading header -->
+    <string name="loading_header">Loading&#8230;</string>
 
 
     <!-- Launch screen -->
